<resources>
    <string name="app_name">Panen.In</string>
    <string name="title_home">Beranda</string>
    <string name="title_shopping">Belanja</string>
    <string name="title_profile">Profil</string>

    <string name="panen_in">Panen.in</string>
    <string name="text_jargon">benih terbaik, awal keberhasilan</string>
    <string name="weather_predict_button_tag">Prediksi Cuaca</string>
    <string name="reccomendation_crop_tag">Rekomendasi Tanaman</string>
    <string name="market_visualization_tag">Visualisasi Data Pasar</string>
    <string name="dummy_location">Serapuh ABC</string>
    <string name="min_temperature_tag">Min</string>
    <string name="max_temperature_tag">Max</string>
    <string name="min_temperature_text">25°C</string>
    <string name="max_temperature_text">28°C</string>
    <string name="average_tag">Rata-rata</string>
    <string name="average_temperature_text">27°C</string>
    <string name="condition_text">Mendung</string>
    <string name="average_humidity_tag">Kelembaban Rata-Rata</string>
    <string name="wind_velocity_tag">Kecepatan Angin</string>
    <string name="wind_direction_tag">Arah Angin</string>
    <string name="sun_intensity_tag">Intensitas Matahari</string>
    <string name="average_humidity_text">55% RH</string>
    <string name="wind_velocity_text">100 m/sec</string>
    <string name="wind_direction_text">Barat Daya</string>
    <string name="sun_intensity_text">10 jam</string>
    <string name="choose_region_tag">Pilih Kawasan</string>
    <string name="choose_plant_type_tag">Pilih Tipe Tanaman</string>
    <string name="choose_duration_tag">Pilih durasi</string>
    <string name="predict_now">Prediksi Sekarang</string>
    <string name="number_prediction_text">00.000</string>
    <string name="unit_prediction">Ku/Ha</string>
    <string name="choose_year_tag">Pilih Tahun</string>
    <string name="year_tag">Tahun</string>
    <string name="region_tag">Kawasan</string>
    <string name="commodity_tag">Komoditi</string>
    <string name="visualize_now">Visualisasi</string>
    <string name="title_visualization_page">Visualisasi Harga Pasar</string>
    <string name="title_reccomendation_page">Rekomendasi</string>
    <string name="title_weather_prediction_page">Prediksi Cuaca</string>
    <string name="image_preview">image preview</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="title_welcome_1">Tentukan prediksi panen dengan hasil maksimal</string>
    <string name="text_welcome_1">Prediksi terbaik berdasarkan data dan sesuai dengan lokasi, tipe tanaman, dan durasi waktu yang diinginkan</string>
    <string name="title_welcome_2">"Temukan prediksi cuaca secara real-time  "</string>
    <string name="text_welcome_2">Curah hujan, suhu, tingkat kelembapan, kecepatan dan arah angin, serta intensitas sinar matahari</string>
    <string name="title_welcome_3">Ketahui visualisasi data pasar terbaru</string>
    <string name="text_welcome_3">Dapatkan gambaran mengenai harga komoditas tanaman di pasaran</string>

    <string name="login_daftar_tag">LOGIN / DAFTAR</string>
    <string name="halo_user">Halo Panen.ers</string>
    <string name="general_information_tag">Informasi Umum</string>
    <string name="app_guide_tag">Panduan Aplikasi</string>
    <string name="info_panenIn_tag">Informasi Panen.In</string>
    <string name="privacy_policy_tag">Kebijakan Privasi</string>
    <string name="logout_tag">Logout</string>
    <string name="plus">+</string>
    <string name="default_item_count">0</string>
    <string name="minus">-</string>
    <string name="input_city">Masukkan kota</string>
    <string name="search">Cari</string>
    <string name="explain_duration_tag">x 4 Bulan</string>
    <string name="related_to_tag">Harga</string>
    <string name="sorry_cannot_find_city">Mohon maaf, kota tidak ditemukan.</string>
    <string name="sorry_data_not_provide">Mohon maaf, data belum tersedia.</string>
    <string name="price_in_rupiah">Harga dalam Rupiah</string>
    <string name="search_prices_visualization_now">Cari visualisasi harga pasar sekarang !</string>
    <string name="description_image_welcome_slide_3">Gambar wanita memegang hp di depan kebun</string>
    <string name="description_image_welcoming_slide_2">Gambar pemandangan sawah</string>
    <string name="string_description_image_welcoming_slide_2">Gambar pemandangan sawah</string>
    <string name="description_image_welcome_slide_1">Gambar bakul sayuran</string>
    <string name="image_logo_panenin">Image logo Panenin</string>
    <string name="paddy">Padi</string>
    <string name="rice">beras</string>
    <string name="cart">Cart</string>
    <string name="order_id_text">ORDER ID: #190211246390</string>
    <string name="send_to">Diantar ke</string>
    <string name="address">Puri Indah Garini blok C no.3</string>
    <string name="edit">edit</string>
    <string name="location">location</string>
    <string name="date">SELASA, 20 OKT 2020</string>
    <string name="time">20:21</string>
    <string name="order_text">PESANAN</string>
    <string name="send_method_text">METODE PENGIRIMAN</string>
    <string name="payment_method_text">METODE PEMBAYARAN</string>
    <string name="payment_detail_text">DETAIL PEMBAYARAN</string>
    <string name="order_now">PESAN SEKARANG</string>
    <string name="bibit_image">bibit</string>
    <string name="price_text">Rp150.000</string>
    <string name="bibit_name">Bibit Kopi</string>
    <string name="qty_txt">3</string>
    <string name="send_method">JNE</string>
    <string name="payment_method">BNI</string>
    <string name="harga">Harga</string>
    <string name="angka_harga">Rp 150.000</string>
    <string name="discount">Discount</string>
    <string name="discount_txt">-Rp 0</string>
    <string name="ongkos_kirim">Biaya Pengiriman</string>
    <string name="ongkir_txt">Rp 10.000</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="total_txt">Rp 160.000</string>
    <string name="success_order_txt">PESANAN BERHASIL DIBUAT</string>
    <string name="send_from">LOKASI PEMBELIAN</string>
    <string name="address_buy">Grand Indonesia</string>
    <string name="confirm_order">KONFIRMASI PEMBAYARAN</string>
    <string name="cancel_order_x">X Batalkan Pesanan</string>
    <string name="confirm_order_title">Konfirmasi Pesanan</string>

    <string name="success_txt">Pesananmu sedang diproses ...</string>
    <string name="back_to_home">KEMBALI KE BERANDA</string>
    <string name="success_image">success image</string>
    <string name="button">button</string>

    <string-array name="region_list">
        <item>Bandung</item>
        <item>Bogor</item>
    </string-array>

    <string-array name="plant_type_list">
        <item>Jagung</item>
        <item>Padi</item>
    </string-array>

    <string-array name="duration_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="year_list">
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>

    <string-array name="region_visualization_list">
        <item>Tasikmalaya</item>
        <item>Bandung</item>
        <item>Cianjur</item>
        <item>Indramayu</item>
        <item>Subang</item>
    </string-array>

    <string-array name="prices_list">
        <item>Rata-rata</item>
        <item>Tertinggi</item>
        <item>Terendah</item>
    </string-array>

</resources>