<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/min_temperature_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/min_temperature_tag"
        android:textColor="@color/grey_500"
        android:fontFamily="@font/quicksand"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/min_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/min_temperature" />

    <TextView
        android:id="@+id/min_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/min_temperature_text"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/grey_200"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/min_temperature_tag"
        app:layout_constraintTop_toBottomOf="@+id/average_tag" />

    <TextView
        android:id="@+id/max_temperature_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/max_temperature_tag"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/grey_500"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/max_temperature"
        app:layout_constraintEnd_toEndOf="@+id/min_temperature_tag"
        app:layout_constraintStart_toStartOf="@+id/min_temperature_tag"
        app:layout_constraintTop_toTopOf="@+id/max_temperature" />

    <TextView
        android:id="@+id/max_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/max_temperature_text"
        android:textColor="@color/grey_200"
        android:textSize="30sp"
        android:fontFamily="@font/quicksand"
        app:layout_constraintBottom_toBottomOf="@+id/condition_text"
        app:layout_constraintEnd_toEndOf="@+id/min_temperature"
        app:layout_constraintStart_toEndOf="@+id/max_temperature_tag"
        app:layout_constraintTop_toBottomOf="@+id/min_temperature" />

    <TextView
        android:id="@+id/average_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/average_tag"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/grey_500"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/min_temperature"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/average_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/average_temperature_text"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/brown_700"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/average_tag"
        app:layout_constraintStart_toStartOf="@+id/average_tag"
        app:layout_constraintTop_toBottomOf="@+id/average_tag" />

    <TextView
        android:id="@+id/condition_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/condition_text"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/grey_200"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/average_temperature"
        app:layout_constraintStart_toStartOf="@+id/average_temperature"
        app:layout_constraintTop_toBottomOf="@+id/average_temperature" />

    <TextView
        android:id="@+id/average_humidity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/average_humidity_tag"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/brown_700"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/max_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/condition_text" />

    <TextView
        android:id="@+id/average_humidity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/average_humidity_text"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/yellow_500"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/average_humidity"
        app:layout_constraintStart_toStartOf="@+id/average_humidity"
        app:layout_constraintTop_toBottomOf="@+id/average_humidity" />

    <TextView
        android:id="@+id/wind_velocity_tag"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/wind_velocity_tag"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/brown_700"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/wind_direction_tag"
        app:layout_constraintStart_toEndOf="@+id/average_humidity"
        app:layout_constraintTop_toBottomOf="@+id/condition_text" />

    <TextView
        android:id="@+id/wind_velocity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/wind_velocity_text"
        android:textColor="@color/yellow_500"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/wind_velocity_tag"
        app:layout_constraintStart_toStartOf="@+id/wind_velocity_tag"
        app:layout_constraintTop_toBottomOf="@+id/wind_velocity_tag" />

    <TextView
        android:id="@+id/wind_direction_tag"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/wind_direction_tag"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/brown_700"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/sun_intensity_tag"
        app:layout_constraintStart_toStartOf="@+id/condition_text"
        app:layout_constraintTop_toBottomOf="@+id/condition_text" />


    <TextView
        android:id="@+id/wind_direction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/wind_direction_text"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/yellow_500"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/wind_direction_tag"
        app:layout_constraintStart_toStartOf="@+id/wind_direction_tag"
        app:layout_constraintTop_toBottomOf="@+id/wind_direction_tag" />

    <TextView
        android:id="@+id/sun_intensity_tag"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/sun_intensity_tag"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/brown_700"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/condition_text"
        app:layout_constraintTop_toBottomOf="@+id/condition_text" />

    <TextView
        android:id="@+id/sun_intensity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/sun_intensity_text"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/yellow_500"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sun_intensity_tag"
        app:layout_constraintStart_toStartOf="@+id/sun_intensity_tag"
        app:layout_constraintTop_toBottomOf="@+id/sun_intensity_tag" />

</androidx.constraintlayout.widget.ConstraintLayout>