<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shopping.CheckoutActivity">

    <TextView
        android:id="@+id/order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/order_id_text"
        android:textSize="20sp"
        android:fontFamily="@font/quicksand_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_location"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/address_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/send_to"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/quicksand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/address" />

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end"
            android:contentDescription="@string/edit"
            android:src="@drawable/ic_outline_edit_24"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="@+id/address"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="50dp"
            android:text="@string/address"
            android:textStyle="bold"
            android:textSize="22sp"
            android:fontFamily="@font/quicksand_bold"
            app:layout_constraintBottom_toBottomOf="@+id/address_to"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/location_point" />

        <ImageButton
            android:id="@+id/location_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/location"
            android:src="@drawable/ic_outline_location_on_24"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/address_to"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>